Update DAO, model, and UI logic + fix reservation logic